#128 Upgraded the failing test to reflect the new final semantics.